crates/markdown-neuraxis-engine/src/editing/snapshots/blocks/blockquote_nested.snap
---
source: crates/markdown-neuraxis-engine/src/editing/snapshot.rs
expression: formatted
---
BlockQuote [0..202]
  children:
    Paragraph [2..24]
      segments:
        Text [2..12] "Blockquote"
        SoftBreak [12..12]
        Text [15..24] "multiline"
    Paragraph [30..86]
      segments:
        Text [30..72] "...continued after trailing space and with"
        HardBreak [72..75]
        Text [77..86] "hardbreak"
    Paragraph [91..145]
      segments:
        Text [91..128] "... continued without trailing space."
        SoftBreak [128..128]
        Text [131..145] "Nested quotes:"
    BlockQuote [148..202]
      children:
        Paragraph [150..180]
          segments:
            Text [150..161] "Inner quote"
            SoftBreak [161..161]
            Text [166..180] "also multiline"
        BlockQuote [185..201]
          children:
            Paragraph [187..200]
              segments:
                Text [187..200] "Deepest quote"
Paragraph [202..225]
  segments:
    Text [202..224] "Nesting without space:"
BlockQuote [226..274]
  children:
    Paragraph [228..239]
      segments:
        Text [228..239] "Outer quote"
    BlockQuote [241..274]
      children:
        Paragraph [243..254]
          segments:
            Text [243..254] "Inner quote"
        BlockQuote [257..273]
          children:
            Paragraph [259..272]
              segments:
                Text [259..272] "Deepest quote"
Paragraph [274..332]
  segments:
    Text [274..331] "Separated by blank line (should be separate blockquotes):"
BlockQuote [333..352]
  children:
    Paragraph [335..351]
      segments:
        Text [335..351] "First blockquote"
BlockQuote [353..373]
  children:
    Paragraph [355..372]
      segments:
        Text [355..372] "Second blockquote"
BlockQuote [374..393]
  children:
    Paragraph [376..392]
      segments:
        Text [376..381] "Third"
        SoftBreak [381..381]
        Text [384..392] "softwrap"
BlockQuote [394..416]
  children:
    Paragraph [396..415]
      segments:
        Text [396..402] "Fourth"
        HardBreak [402..405]
        Text [407..415] "hardwrap"
