crates/markdown-neuraxis-engine/src/editing/snapshots/blocks/blockquote_single.snap
---
source: crates/markdown-neuraxis-engine/src/editing/snapshot.rs
expression: formatted
---
BlockQuote [0..24]
  segments:
    Text [2..23] "This is a blockquote."
