crates/markdown-neuraxis-engine/src/editing/snapshots/blocks/code_fenced_backtick.snap
---
source: crates/markdown-neuraxis-engine/src/editing/snapshot.rs
expression: formatted
---
FencedCode { language: None } [0..25]
  segments:
    Text [4..20] "plain code block"
