crates/markdown-neuraxis-engine/src/editing/snapshots/blocks/frontmatter.snap
---
source: crates/markdown-neuraxis-engine/src/editing/snapshot.rs
expression: formatted
---
Paragraph [69..96]
  segments:
    Text [69..95] "Content after frontmatter."
