crates/markdown-neuraxis-engine/src/editing/snapshots/blocks/heading_h1.snap
---
source: crates/markdown-neuraxis-engine/src/editing/snapshot.rs
expression: formatted
---
Heading { level: 1 } [0..18]
  segments:
    Text [2..17] "Level 1 Heading"
