crates/markdown-neuraxis-engine/src/editing/snapshots/blocks/heading_h4.snap
---
source: crates/markdown-neuraxis-engine/src/editing/snapshot.rs
expression: formatted
---
Heading { level: 4 } [0..21]
  segments:
    Text [5..20] "Level 4 Heading"
