crates/markdown-neuraxis-engine/src/editing/snapshots/blocks/heading_h5.snap
---
source: crates/markdown-neuraxis-engine/src/editing/snapshot.rs
expression: formatted
---
Heading { level: 5 } [0..22]
  segments:
    Text [6..21] "Level 5 Heading"
